<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_edit_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/mainActivityNameEditTextHint"
            android:hint="@string/mainActivityNameEditTextHint"
            android:inputType="text"
            android:textSize="18sp"
            tools:targetApi="o" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mainActivityToppingTextView"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mainActivityQuantityTextView"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/whipped_cream_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/mainActivityWhippedCreamTextView"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/chocolate_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/mainActivityChocolateTextView"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/quantity_dec_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="buttonDec"
                android:text="@string/mainActivityDecButton"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/mainActivityQuantityNumTextView"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/quantity_inc_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="buttonInc"
                android:text="@string/mainActivityIncButton"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mainActivityOrderSummaryTextView"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonOrder"
            android:text="@string/mainActivityOrderButton"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>